@@ -1,3 +1,10 @@
+2003-01-19  WATANABE Katsuyuki <knabe@sannet.ne.jp>
+
+	* [w3m-dev 03654] file.c:image_source when undef USE_IMAGE
+	* file.c (readHeader): image_source ifdef USE_IMAGE
+		(loadGeneralFile): ditto
+		(uncompress_stream): ditto
+
 2003-01-19  Fumitoshi UKAI  <ukai@debian.or.jp>
 
 	* [w3m-dev 03653] SourceForge.net: 576032 w3m https crashes with OpenSSL-0.9.7
